--- a/style.css
+++ b/style.css
@@ -15,6 +15,7 @@ body{
 }
 .container{
     position: absolute;
+    box-shadow: 0 0 9px 0px #0000009e;
     width: 50%;
     min-width: 580px;
     transform: translate(-50%,-50%);
